@startuml
title Pancake Lab

package "org.pancakelab.api" {
  interface DiscipleOrders {
    + createOrder(building, room): UUID
    + listMenu(): List<String>
    + addPancake(orderId): int
    + addIngredient(orderId, ingredient)
    + addIngredient(orderId, pancakeId, ingredient)
    + viewOrder(orderId): List<String>
    + removePancakes(description, orderId, count)
    + completeOrder(orderId)
    + cancelOrder(orderId)
  }
  interface Kitchen {
    + viewOrder(orderId): List<String>
    + listCompletedOrders(): Set<UUID>
    + prepareOrder(orderId)
  }
  interface DeliveryDesk {
    + listPreparedOrders(): Set<UUID>
    + deliverOrder(orderId): DeliveryResult
  }
  interface PancakeShop
  class OrderTicket <<DTO>> {
    orderId: UUID
    building: int
    room: int
    status: String
    pancakes: List<String>
  }
}

package "org.pancakelab.logging" {
  interface ShopJournal
  class SystemShopJournal
  class BoundedShopJournal
  class DiscardingShopJournal
  class FileOrderArchive
  class Logfmt
}

package "org.pancakelab.service" {
  class PancakeService
  class InMemoryOrderRepository
  class CompositeOrderEventListener
  class KitchenBoard
  class ShopMetrics
  interface OrderEventListener
}

package "org.pancakelab.exception" {
  class ShopException
  class InvalidLocationException
  class UnknownIngredientException
  class OrderNotFoundException
  class PancakeNotFoundException
  class InvalidRemovalCountException
  class DuplicateIngredientException
  class IllegalOrderStateException
}

package "org.pancakelab.domain" {
  interface OrderRepository {
    + save(order)
    + withOrder(orderId, action)
    + take(orderId, action)
    + remove(orderId)
    + idsWithStatus(status): Set<UUID>
  }
  class Order {
    - id: UUID
    - status: OrderStatus
    + addPancake(): int
    + addIngredient(pancakeId, ingredient)
    + removePancakes(description, count): int
    + complete()
    + prepare()
    + markDelivered()
    + cancel()
    + drainEvents(): List<OrderEvent>
  }
  class Pancake {
    - id: int
    + addIngredient(ingredient)
    + description(): String
  }
  class Ingredient
  class Address
  class AddressRegistry {
    + require(building, room): Address
    + hasBuilding(building): boolean
    + buildings(): Set<Integer>
  }
  class IngredientCatalog
  interface OrderEvent <<sealed>>
  enum OrderStatus {
    CREATED
    COMPLETED
    PREPARED
    DELIVERED
    CANCELLED
    + allowsEditing(): boolean
    + canTransitionTo(next): boolean
  }
}

PancakeShop --|> DiscipleOrders
PancakeShop --|> Kitchen
PancakeShop --|> DeliveryDesk
PancakeService ..|> PancakeShop
PancakeService --> OrderEventListener
PancakeService --> OrderRepository
PancakeService --> IngredientCatalog
PancakeService --> AddressRegistry
CompositeOrderEventListener ..|> OrderEventListener
KitchenBoard ..|> OrderEventListener
ShopMetrics ..|> OrderEventListener
ShopJournal --|> OrderEventListener
FileOrderArchive ..|> OrderEventListener
InMemoryOrderRepository ..|> OrderRepository
SystemShopJournal ..|> ShopJournal
BoundedShopJournal ..|> ShopJournal
DiscardingShopJournal ..|> ShopJournal
Order ..> OrderEvent : records
OrderEventListener ..> OrderEvent : handle
PancakeShop ..> DeliveryResult : returns
Order *-- Pancake
Order *-- Address
Order --> OrderStatus
Pancake *-- Ingredient
IngredientCatalog ..> Ingredient : allowlists
AddressRegistry ..> Address : validates
PancakeService ..> InvalidLocationException
PancakeService ..> UnknownIngredientException
OrderRepository ..> OrderNotFoundException
Order ..> IllegalOrderStateException
Order ..> PancakeNotFoundException
OrderStatus ..> IllegalOrderStateException
InvalidLocationException --|> ShopException
UnknownIngredientException --|> ShopException
OrderNotFoundException --|> ShopException
PancakeNotFoundException --|> ShopException
InvalidRemovalCountException --|> ShopException
DuplicateIngredientException --|> ShopException
IllegalOrderStateException --|> ShopException

note right of PancakeShop
  Combined client API. Does not return Order,
  Pancake, or Ingredient.
end note

note right of OrderStatus
  Lifecycle rules live on the enum.
  Only CREATED allows pancake edits (add/remove).
  Cancel allowed until DELIVERED.
  Cancelled and delivered orders are removed from the store.
end note

@enduml
